[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "reallog-agent"
version = "0.1.0"
description = "Vision Turbo-Shell for reallog.ai — camera vision → PLATO → agent"
requires-python = ">=3.10"
dependencies = ["requests>=2.28"]
[project.urls]
Homepage = "https://github.com/SuperInstance/reallog-agent"
